--- a/WF_App1.csproj
+++ b/WF_App1.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="DIASDAQ.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
